--- a/rooms/roomballot/templates/roomballot/syndicate-view.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-view.html
@@ -7,13 +7,30 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1">
     <title>Your Syndicate | Downing JCR RBS</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
-    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
           media="all"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"
             type="text/javascript"></script>
+
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    Tawk_API.visitor = {
+        name : '{{ student.first_name }} ({{ request.user.username }})',
+        email : '{{ request.user.email }}'
+        };
+    (function(){
+        var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+        s1.async=true;
+        s1.src='https://embed.tawk.to/5b44b4b76d961556373d93d4/default';
+        s1.charset='UTF-8';
+        s1.setAttribute('crossorigin','*');
+        s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </head>
 <body>
 
@@ -29,7 +46,7 @@
         function HandleResponse(responseCode) {
             if (responseCode === 1) location.reload(true);
             else if (responseCode === 2) location.replace('../dashboard');
-            else location.replace('../error/' + responseCode.toString());
+            else location.assign('../error/' + responseCode.toString());
         }
 
         function MakeAjaxRequest(code) {
