--- a/rooms/roomballot/templates/roomballot/dashboard-student.html
+++ b/rooms/roomballot/templates/roomballot/dashboard-student.html
@@ -69,8 +69,12 @@
                 <p>You have chosen {{ room }}.</p>
                 <a href="room/{{ room.room_id }}" class="btn btn-primary">View Room</a>
                 {% else %}
-                <p>You haven't picked a room yet.</p>
-                <a href="staircases" class="btn btn-primary">View Rooms</a>
+                    {% if can_pick %}
+                        <p>It's time to pick your room.</p>
+                    {% else %}
+                        <p>You can't pick your room quite yet.</p>
+                    {% endif %}
+                <a href="staircases" class="btn btn-primary">Browse Rooms</a>
                 {% endif %}
             </div>
         </div>
@@ -110,7 +114,8 @@
                     <p>Your ranking hasn't been generated yet. Check back soon!</p>
                     <a href="ranking" class="btn btn-primary">View Ranking</a>
                     {% else %}
-                    <p>You are ranked <b>{{ student.rank }} out of all students.</b></p>
+                    <p>You are ranked <b>{{ student.rank }} out of all students.</b><br>
+                    You'll pick your room on {{ student.picks_at }}</p>
                     <a href="ranking" class="btn btn-primary">View Ranking</a>
                     {% endif %}
                 {% else %}
