--- a/rooms/roomballot/templates/roomballot/student-detail.html
+++ b/rooms/roomballot/templates/roomballot/student-detail.html
@@ -82,6 +82,14 @@
                         {{ student.rank }}
                     </td>
                 </tr>
+                {% if not student.has_allocated %}
+                <tr>
+                    <td><b>Picks At</b></td>
+                    <td>
+                        {{ student.picks_at }}
+                    </td>
+                </tr>
+                {% endif %}
                 {% endif %}
                 <tr>
                     <td><b>Room Allocated</b></td>
@@ -89,6 +97,7 @@
                         {{ room }}
                     </td>
                 </tr>
+
 
                 </tbody>
             </table>
