--- a/rooms/roomballot/templates/roomballot/create-syndicate.html
+++ b/rooms/roomballot/templates/roomballot/create-syndicate.html
@@ -118,12 +118,16 @@
         $('#continue').click(function () {
             CreateSyndicateAjaxResponse();
         });
+
+        $('#restart').click(function () {
+            location.reload();
+        })
     });
 </script>
 
 <nav class="navbar navbar-expand-lg navbar-dark justify-content-between mb-4">
 
-    <a class="navbar-brand" href="/roomballot">
+    <a class="navbar-brand" href="/roomballot/welcome">
         <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width="60"
              style="padding-right: 10px">
         Room Balloting System
@@ -168,6 +172,7 @@
             </div>
 
             <div align="right">
+                <button class="btn btn-primary" id="restart">Start Again</button>
                 <button class="btn btn-primary" id="continue">Create</button>
             </div>
         </div>
