--- a/rooms/roomballot/templates/roomballot/error.html
+++ b/rooms/roomballot/templates/roomballot/error.html
@@ -13,7 +13,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark justify-content-between mb-4">
 
-    <a class="navbar-brand" href="/roomballot">
+    <a class="navbar-brand" href="/roomballot/welcome">
         <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width="60"
              style="padding-right: 10px">
         Room Balloting System
