--- a/rooms/roomballot/templates/roomballot/syndicate-list.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-list.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE-edge">
     <meta name="viewport" content="width = device-width, initial-scale = 1">
-    <title>Ballot Ranking | Downing JCR RBS</title>
+    <title>Syndicates | Downing JCR RBS</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     <link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css"
@@ -19,7 +19,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark justify-content-between mb-4">
 
-    <a class="navbar-brand" href="/roomballot/welcome">
+    <a class="navbar-brand" href="/roomballot/admin">
         <img src="https://www.jcr.dow.cam.ac.uk/storage/app/media/dowjcrwhite.png" width="60"
              style="padding-right: 10px">
         Room Balloting System
@@ -30,7 +30,7 @@
 
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="nav navbar-nav">
-            <li class="mr-sm-2"><a class="nav-link" href="/roomballot/dashboard">Dashboard</a></li>
+            <li class="mr-sm-2"><a class="nav-link" href="/roomballot/admin">Admin Dashboard</a></li>
         </ul>
     </div>
 </nav>
@@ -40,50 +40,42 @@
     <div class="border-bottom">
         <div class="row">
             <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-                <h2>Ballot Ranking</h2>
+                <h2>Syndicates</h2>
             </div>
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 mt-4">
-            <table class="table table-bordered">
+    <div class="row mb-5">
+
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 mt-4">
+            <table class="table table-bordered table-hover table-striped">
                 <thead>
                 <tr>
-                    <th scope="col">Rank</th>
-                    <th scope="col">Name</th>
-                    <th scope="col" class="d-none d-sm-table-cell">CRSid</th>
-                    <th scope="col" class="d-none d-sm-table-cell">Picks at</th>
+                    <th scope="col">Syndicate ID</th>
+                    <th scope="col" class="d-none d-sm-table-cell">Owner</th>
+                    <th scope="col" class="d-none d-sm-table-cell">Year</th>
+                    <th scope="col">Complete?</th>
                     <th scope="col"></th>
                 </tr>
                 </thead>
                 <tbody>
-                {% for student in students %}
+                {% for syndicate in syndicates %}
                 <tr>
-                    <td>{{ student.rank }}</td>
-                    <td>{{ student.first_name }} {{ student.surname }}</td>
-                    <td class="d-none d-sm-table-cell">{{ student.user_id }}</td>
-                    <td class="d-none d-sm-table-cell">{{ student.picks_at }}</td>
+                    <td>{{ syndicate.syndicate_id }}</td>
+                    <td class="d-none d-sm-table-cell">{{ syndicate.owner_id }}</td>
+                    <td class="d-none d-sm-table-cell">{% if syndicate.year == 1 %}First{% else %}Second{% endif %}</td>
+                    <td>{% if syndicate.complete %}Yes{% else %}No{% endif %}</td>
                     <td class="text-center">
-                        <a class="btn btn-primary" href="student/{{ student.user_id }}">View</a>
+                        <a class="btn btn-primary" href="syndicate/{{ syndicate.syndicate_id }}">Manage</a>
                     </td>
                 </tr>
                 {% endfor %}
                 </tbody>
             </table>
         </div>
+
     </div>
 </div>
-
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
-        integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-        crossorigin="anonymous"></script>
 
 </body>
 </html>
