Edited template formatting.

--- a/rooms/roomballot/templates/roomballot/student-manage.html
+++ b/rooms/roomballot/templates/roomballot/student-manage.html
@@ -160,7 +160,7 @@
 
     <div class="row mt-4">
         <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12">
-            <table class="table table-bordered table-striped table-hover">
+            <table class="table table-bordered table-striped">
                 <thead style="display:none">
                 <tr>
                     <th scope="col"></th>
