--- a/rooms/roomballot/templates/roomballot/syndicate-view.html
+++ b/rooms/roomballot/templates/roomballot/syndicate-view.html
@@ -113,7 +113,9 @@
         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
             <p>
                 {% if syndicate.complete %}
-                    This syndicate is now complete.
+                    This syndicate is now complete. If you want to make any changes to this syndicate, you should
+                    contact an administrator using the chat feature, or by emailing <a href="mailto:internet:jcr.dow.cam.ac.uk">
+                    internet@jcr.dow.cam.ac.uk</a>.
                 {% else %}
                     This syndicate is not yet complete - we're still waiting on people to accept
                     their invitations.
